--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,10 +27,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/timbreAutomatico.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.PanamaHitek_Arduino-2.8.3.jar=C:\\Users\\Lenovo\\Documents\\LibreriasNetBeans\\PanamaHitek_Arduino-2.8.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.PanamaHitek_Arduino-2.8.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
