Agregado funciones de guardar horarios y eliminarlos

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,12 +27,14 @@ dist.dir=dist
 dist.jar=${dist.dir}/timbreAutomatico.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.json-simple-1.1.jar=C:\\Users\\Lenovo\\Documents\\LibreriasNetBeans\\RI-ING-058 Invocaci\u00f3n al ASW desde JAVA\\json-simple-1.1.jar
 file.reference.PanamaHitek_Arduino-2.8.3.jar=C:\\Users\\Lenovo\\Documents\\LibreriasNetBeans\\PanamaHitek_Arduino-2.8.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.PanamaHitek_Arduino-2.8.3.jar}
+    ${file.reference.PanamaHitek_Arduino-2.8.3.jar}:\
+    ${file.reference.json-simple-1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
