Mejorada la interfaz grafica y agregado nuevo atributo a horario

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,13 +30,21 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.json-simple-1.1.jar=C:\\Users\\Lenovo\\Documents\\LibreriasNetBeans\\RI-ING-058 Invocaci\u00f3n al ASW desde JAVA\\json-simple-1.1.jar
+file.reference.json-simple-1.1.jar-1=dist\\lib\\json-simple-1.1.jar
+file.reference.json-simple-1.1.jar-2=C:\\Users\\USUARIO\\Documents\\NetbeansLibrerias\\json-simple-1.1.jar
 file.reference.PanamaHitek_Arduino-2.8.3.jar=C:\\Users\\Lenovo\\Documents\\LibreriasNetBeans\\PanamaHitek_Arduino-2.8.3.jar
+file.reference.PanamaHitek_Arduino-2.8.3.jar-1=dist\\lib\\PanamaHitek_Arduino-2.8.3.jar
+file.reference.PanamaHitek_Arduino-2.8.3.jar-2=C:\\Users\\USUARIO\\Documents\\NetbeansLibrerias\\PanamaHitek_Arduino-2.8.3.jar
 includes=**
 jar.compress=true
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.PanamaHitek_Arduino-2.8.3.jar}:\
-    ${file.reference.json-simple-1.1.jar}
+    ${file.reference.json-simple-1.1.jar}:\
+    ${file.reference.PanamaHitek_Arduino-2.8.3.jar-1}:\
+    ${file.reference.json-simple-1.1.jar-1}:\
+    ${file.reference.PanamaHitek_Arduino-2.8.3.jar-2}:\
+    ${file.reference.json-simple-1.1.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
